完善我的页面

--- a/myface.html
+++ b/myface.html
@@ -68,6 +68,7 @@
 				
 				
 				// 绑定选择照片的菜单按钮
+				// cropper
 				var link_choosePhoto = document.getElementById("link_choosePhoto");
 				link_choosePhoto.addEventListener("tap", function() {
 					mui.openWindow({
