数据加载、刷新问题

--- a/index.html
+++ b/index.html
@@ -92,8 +92,18 @@
 					}
 				}
 			})
-			
+			// 延时加载
+			setTimeout("initData()", "1000");
 		})
+		
+		// 预加载
+		function initData() {
+			var chatlist = plus.webview.getWebviewById("chatlist.html");
+			mui.fire(chatlist, "refresh");
+			var me = plus.webview.getWebviewById("me.html");
+			mui.fire(me, "refresh");
+			
+		}
 	</script>
 </body>
 </html>
