--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </head>
 <body>
 	<header class="mui-bar mui-bar-nav title">
-	    <h1 class="mui-title title-color"><b>慕信</b></h1>
+	    <h1 class="mui-title title-color" id="muxin_title"><b>慕信</b></h1>
 	</header>
 	<nav class="mui-bar mui-bar-tab">
 	    <a class="mui-tab-item mui-active" tabindex="0">
@@ -69,6 +69,9 @@
 				return false;
 			}
 			
+			// 对网络连接进行监听
+			netChangeSwitch();
+			
 			var indexWebview = plus.webview.currentWebview()
 			
 			for (var i = 0; i < muxinArray.length; i++) {
@@ -95,6 +98,22 @@
 			// 延时加载
 			setTimeout("initData()", "1000");
 		})
+		
+		
+		// 监听网络状态更改
+		function netChangeSwitch() {
+			document.addEventListener("netchange", function(){
+				// 网络状态获取和判断
+				var connectionStatus = plus.networkinfo.getCurrentType();
+				if (connectionStatus != 0 && connectionStatus != 1) {
+					var muxin_title = document.getElementById("muxin_title");
+					muxin_title.innerHTML = "<b>慕信</b>";
+				} else {
+					var muxin_title = document.getElementById("muxin_title");
+					muxin_title.innerHTML = "<b>慕信（未连接）</b>";
+				}
+			})
+		}
 		
 		// 预加载
 		function initData() {
